--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.8.7",
     "@vercel/analytics": "^1.1.1",
     "astro": "^4.0.0",
+    "astro-compress": "^2.2.5",
     "minimatch": "^9.0.3",
     "p-retry": "^6.1.0",
     "sharp": "^0.33.0",
